{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 130,
  "lineage": "bc83fd0e-6d36-87a6-76bd-80d76d0fb0f9",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011e48799a29115e9",
            "arn": "arn:aws:ec2:us-east-1:565284591142:instance/i-0a23c984fba74bbd6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a23c984fba74bbd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d9349c79525e463",
            "private_dns": "ip-10-0-101-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010bdef24f81f5758",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d82b1d0a20e7919",
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2e486dbf066624f"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.vpc.module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:network-acl/acl-0ad8d3ed6b78769f5",
            "default_network_acl_id": "acl-0ad8d3ed6b78769f5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ad8d3ed6b78769f5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "565284591142",
            "subnet_ids": [
              "subnet-01dbbc6403dd70de6",
              "subnet-05d82b1d0a20e7919",
              "subnet-07b43542296918f5b",
              "subnet-0be8808fb4c2bf2f2"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-044f3692834dbdaea",
            "default_route_table_id": "rtb-044f3692834dbdaea",
            "id": "rtb-044f3692834dbdaea",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:security-group/sg-0f2e486dbf066624f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f2e486dbf066624f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "565284591142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba83f04b802ce88d",
            "association_id": "eipassoc-0654971415612c08f",
            "domain": "vpc",
            "id": "eipalloc-0ba83f04b802ce88d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06ee217d46dc47224",
            "private_dns": "ip-10-0-101-176.ec2.internal",
            "private_ip": "10.0.101.176",
            "public_dns": "ec2-54-80-199-20.compute-1.amazonaws.com",
            "public_ip": "54.80.199.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e6e61d535f6a44c",
            "association_id": "eipassoc-08380a4fa490eff19",
            "domain": "vpc",
            "id": "eipalloc-07e6e61d535f6a44c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-080b5e1fa12dbaf78",
            "private_dns": "ip-10-0-102-59.ec2.internal",
            "private_ip": "10.0.102.59",
            "public_dns": "ec2-44-197-13-64.compute-1.amazonaws.com",
            "public_ip": "44.197.13.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:internet-gateway/igw-007ad6791d6556846",
            "id": "igw-007ad6791d6556846",
            "owner_id": "565284591142",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba83f04b802ce88d",
            "association_id": "eipassoc-0654971415612c08f",
            "connectivity_type": "public",
            "id": "nat-0721225efb58d93e2",
            "network_interface_id": "eni-06ee217d46dc47224",
            "private_ip": "10.0.101.176",
            "public_ip": "54.80.199.20",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d82b1d0a20e7919",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e6e61d535f6a44c",
            "association_id": "eipassoc-08380a4fa490eff19",
            "connectivity_type": "public",
            "id": "nat-0117d3566a310cf56",
            "network_interface_id": "eni-080b5e1fa12dbaf78",
            "private_ip": "10.0.102.59",
            "public_ip": "44.197.13.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0be8808fb4c2bf2f2",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-us-east-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0152257f6d30633d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0721225efb58d93e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0152257f6d30633d4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c42931c359d351e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0117d3566a310cf56",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c42931c359d351e7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-007ad6791d6556846",
            "id": "r-rtb-015519a9acf517d411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015519a9acf517d41",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-0152257f6d30633d4",
            "id": "rtb-0152257f6d30633d4",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0721225efb58d93e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-0c42931c359d351e7",
            "id": "rtb-0c42931c359d351e7",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0117d3566a310cf56",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:route-table/rtb-015519a9acf517d41",
            "id": "rtb-015519a9acf517d41",
            "owner_id": "565284591142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007ad6791d6556846",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053795cbe620ba16d",
            "route_table_id": "rtb-0152257f6d30633d4",
            "subnet_id": "subnet-01dbbc6403dd70de6"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09273bacca5ab743e",
            "route_table_id": "rtb-0c42931c359d351e7",
            "subnet_id": "subnet-07b43542296918f5b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def7bc81978626a2",
            "route_table_id": "rtb-015519a9acf517d41",
            "subnet_id": "subnet-05d82b1d0a20e7919"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b80fd4953a121d94",
            "route_table_id": "rtb-015519a9acf517d41",
            "subnet_id": "subnet-0be8808fb4c2bf2f2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-01dbbc6403dd70de6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dbbc6403dd70de6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-07b43542296918f5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b43542296918f5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-05d82b1d0a20e7919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d82b1d0a20e7919",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:subnet/subnet-0be8808fb4c2bf2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be8808fb4c2bf2f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565284591142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-02a3647c78d1045e3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:565284591142:vpc/vpc-02a3647c78d1045e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad8d3ed6b78769f5",
            "default_route_table_id": "rtb-044f3692834dbdaea",
            "default_security_group_id": "sg-0f2e486dbf066624f",
            "dhcp_options_id": "dopt-02fbd79e018b8ad4a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a3647c78d1045e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044f3692834dbdaea",
            "owner_id": "565284591142",
            "tags": {
              "Environment": "dev",
              "Name": "Giddy-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Giddy-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}